--- a/Exercise Unit 3 L2.6 - Drill - Exercises in Bayes' Rule.ipynb
+++ b/Exercise Unit 3 L2.6 - Drill - Exercises in Bayes' Rule.ipynb
@@ -32,6 +32,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "From the text above we can write these:\n",
+    "> P(non_suff) = 1-0.5% = 99.5%\n",
+    "\n",
+    "* P(Neg|suff) = 1-98% = 2%\n",
+    "* P(Neg|non_suff) = 1-10% = 90%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In general:\n",
+    "\n",
+    ">P(A|B) = P(A)\\*P(B|A) / P(B)\n",
+    "\n",
+    "AND\n",
+    "\n",
+    ">P(B) = P(A)\\*P(B|A) + P(NON_A)\\*P(B|NON_A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1:\n",
     "\n",
     "-   P(suff)     * P(Pos|suff)     / P(Pos) = P(suff|Pos)\n",
@@ -58,7 +82,9 @@
    "source": [
     "### 3:\n",
     "\n",
-    "= 10%"
+    "Correctly identify a non-sufferer of Thripshaw's = P(non_suff|Neg)\n",
+    "\n",
+    "= ..."
    ]
   },
   {
@@ -68,7 +94,7 @@
     "### 4:\n",
     "Misclassify the person = the test is negative but the person has cancer = P(suff|neg)\n",
     "\n",
-    "P(suff|neg) = P(non_suff) \\* P(neg|suff) / P(neg) = 0.5% \\* (1-98%) / (1-P(pos)) = 0.005*0.02 / (1-0.1044) = too low!?"
+    "P(suff|neg) = P(suff) \\* P(neg|suff) / P(neg) = 0.5% \\* (1-98%) / (1-P(pos)) = 0.005*0.02 / (1-0.1044) = too low!?"
    ]
   }
  ],
