--- a/Exercise Unit 3 L2.6 - Drill - Exercises in Bayes' Rule.ipynb
+++ b/Exercise Unit 3 L2.6 - Drill - Exercises in Bayes' Rule.ipynb
@@ -72,8 +72,12 @@
    "metadata": {},
    "source": [
     "### 2:\n",
+    "Correctly diagnose a sufferer of Thripshaw's \n",
+    ">Question: is this P(pos|suff) or P(suff|pos) ?\n",
     "\n",
-    "= 98%"
+    "P(pos|suff) = 98%\n",
+    "\n",
+    "$$P(suff|pos) = P(suff) * P(pos | suff) / P(pos) = 0.005 * 0.98 / 0.1044 = 0.047 $$\n"
    ]
   },
   {
@@ -82,9 +86,16 @@
    "source": [
     "### 3:\n",
     "\n",
-    "Correctly identify a non-sufferer of Thripshaw's = P(non_suff|Neg)\n",
+    "Correctly identify a non-sufferer of Thripshaw's \n",
+    ">Question: is this P(neg|non_suff) or P(non_suff|neg) ?\n",
     "\n",
-    "= ..."
+    "P(neg|non_suff) = 1-10% = 90%\n",
+    "\n",
+    "$$P(nonsuff|neg) = P(nonsuff) * P(neg|nonsuff) / P(neg)$$\n",
+    "\n",
+    "$$P(neg) = P(suff)*P(neg|suff) + P(nonsuff)*P(neg|nonsuff) = 0.005*0.02+0.995*0.9 = 0.8956 $$\n",
+    "\n",
+    "P(nonsuff|neg) = 0.995*0.9/0.8956=0.9988"
    ]
   },
   {
@@ -93,8 +104,11 @@
    "source": [
     "### 4:\n",
     "Misclassify the person = the test is negative but the person has cancer = P(suff|neg)\n",
+    "or to not have cancer given the test was positive.\n",
     "\n",
-    "P(suff|neg) = P(suff) \\* P(neg|suff) / P(neg) = 0.5% \\* (1-98%) / (1-P(pos)) = 0.005*0.02 / (1-0.1044) = too low!?"
+    "P(suff|neg) = P(suff) \\* P(neg|suff) / P(neg) = 0.5% \\* (1-98%) / (1-P(pos)) = 0.005*0.02 / (1-0.1044) = too low!?\n",
+    "\n",
+    "P(nonsuff|pos) = P(nonsuff)\\*P(pos|nonsuff)/P(pos) = 0.995*0.1/0.1044 = 95.3%"
    ]
   }
  ],
