--- a/Exercise Unit 3 L3.7 - DRILL - Exploring the Central Limit Theorem.ipynb
+++ b/Exercise Unit 3 L3.7 - DRILL - Exploring the Central Limit Theorem.ipynb
@@ -513,7 +513,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random samples taken from a population with binomial distribution where p differs (p= the probability of getting k successes during n repetitions of the event) show that by applying the t-test that their means are different and the differences did not occur by chance."
+    "Random samples taken from a population with binomial distribution where p differs (p= the probability of getting k successes during n repetitions of the event) show that by applying the t-test their means are different and the differences did not occur by chance (a very low p-value less than 5%).\n",
+    "\n",
+    "Also looking at how t-test varies we can say that as the differences between samples get smaller (p goes from 0.2 to 0.4 which is closer to 0.5) the t-test gets smaller:\n",
+    "- the t-test = 16.54 for two samples of 100 items, one with p=0.2 and the other with p=0.5\n",
+    "- the t-test =  6.41 for two samples of 100 items, one with p=0.3 and the other with p=0.5\n",
+    "- the t-test =  5.33 for two samples of 100 items, one with p=0.4 and the other with p=0.5\n"
    ]
   },
   {
