--- a/Capstone1 - data analysis report.ipynb
+++ b/Capstone1 - data analysis report.ipynb
@@ -497,15 +497,15 @@
    "source": [
     "## 1. Which area is the best location for a drugstore?<a class=\"anchor\" id=\"first\"></a>\n",
     "\n",
-    "The criteria to pick the area for a good location can be:\n",
+    "The criteria to pick an area for a good location can be:\n",
     "- it brings the most profit;\n",
-    "- it brings the biggest sales: maybe there are a lot of customers going in;\n",
+    "- it brings the biggest sales: maybe there are a lot of customers going in, or clients buy expensive products;\n",
     "- there are a lot customers passing by but the sales team is lacking selling skills."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -607,15 +607,14 @@
        "1002          59590.56    84350.38  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Overview of the columns that have summable values:\n",
-    "df.groupby('IdLocation')['Total_Sales','No_of_transactions','No_of_medical_prescriptions','Units_Sold','Net_Profit'].sum()\n",
-    "\n"
+    "df.groupby('IdLocation')['Total_Sales','No_of_transactions','No_of_medical_prescriptions','Units_Sold','Net_Profit'].sum()"
    ]
   },
   {
@@ -663,7 +662,7 @@
    "metadata": {},
    "source": [
     "### This graph shows the Total Sales for each location in descending order. \n",
-    "By ploting the Net_Profit column we can see if there are any discrepancies in respect of Total_Sales, i.e. maybe there is a location with a lower value in Total_Sales but with the highest value of Net_Profit."
+    "By ploting the Net_Profit column we can see if there are any discrepancies in respect of Total_Sales, i.e. maybe there is a location with a lower value in Total_Sales but with the highest value of Net_Profit.\n"
    ]
   },
   {
@@ -727,7 +726,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This plot shows the percentages among locations thus we are able to better compare them.\n",
+    "### This plot shows the percentages among locations and thus we are able to better compare them.\n",
     "\n",
     "We observe that even if the IdLocation=1002 has approximately the same value of Total_Sales with idlocation=1001, the value of Net_Profit is quite different, 1002 being better positioned(28.2% vs. 21.2%).\n",
     "\n",
@@ -803,7 +802,7 @@
     "\n",
     "The greater the magnitude of the t-test, the greater the evidence that there is a <b><u>significant</u></b> difference, so we reject the Null Hypothesis.\n",
     "\n",
-    "We'll be using theUsusally we set the pvalue to be less than a cut-off point. We may chose this point to be 5%.\n",
+    "Ususally we set the pvalue to be less than a cut-off point. We may chose this point to be 5%.\n",
     "\n",
     "pvalue is the probability that your sample data occured by chance, and we can reject the null if the pvalue is less than the cut-off point."
    ]
@@ -838,7 +837,8 @@
    "source": [
     "pvalue = 4.1% < 5%\n",
     "\n",
-    "### We reject the null hypothesis and accept that data is significant different for the whole population.\n"
+    "### We reject the null hypothesis and accept that data is significant different for the whole population.\n",
+    "\n"
    ]
   },
   {
@@ -865,7 +865,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* The way of doing things at location 1002 can and should be copied, if possible, to the 1001 and 4 locations.\n",
+    "## Conclusion:\n",
+    "* The way of doing things at location 1002, can and should be copied, if possible, to the 1001 and 4 locations.\n",
     "\n",
     "For now, 1002 is the best location in converting to profit what it sells to the pacient. However there are more questions to be answered in order to discover if there aren't any other hidden advantages that make the 1002's clients easier to sell to."
    ]
@@ -1289,6 +1290,7 @@
    "source": [
     "It seems that there is no direct ling between units sold and the other 2 indicators. There are spikes from time to time, but not a general trend.\n",
     "\n",
+    "### Conclusion:\n",
     "> The company should focus on the top selling products in terms of profit and to promote those that are lower in selling fiures but with a higher Profit/Sales ratio."
    ]
   },
@@ -1632,7 +1634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> When we look at this two indicators, we can say that RX are more expensive products which can be harder to sell.\n",
+    "> When we look at this two indicators, we can say that RX classification has more expensive products which can be harder to sell.\n",
     "\n",
     "### OTC and Suplements have a higher profit/sales ratio. Also this group benefits from a higher number of customers and could grow faster, so Marketing should focus here.\n"
    ]
