--- a/Capstone1 - data analysis report.ipynb
+++ b/Capstone1 - data analysis report.ipynb
@@ -30,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -42,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We import the data from csv file:\n",
@@ -838,7 +842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pvalue = 4.1% < 5%\n",
+    "pvalue = 0.41% < 5%\n",
     "\n",
     "### We reject the null hypothesis and accept that data is significant different for the whole population.\n",
     "\n"
